fix: Update help menu to be more readable

--- a/aoth/help-menu/styles.css
+++ b/aoth/help-menu/styles.css
@@ -1,27 +1,8 @@
-@font-face {
-  font-family: 'PressStart2P';
-  src: url('../../fonts/PressStart2P.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-}
-
-body {
-  background-color: white;
-  color: black;
-  font-family: 'PressStart2P'
-}
-
 ul {
   list-style-type: none;
   text-align: center;
 }
 
 ul li::before {
-  content: "-"; /* Replace '•' with your desired character or content */
   margin-right: 8px; /* Optional: Add space between the bullet and the text */
-}
-
-.content-container {
-  max-width: 500px; /* Set your desired maximum width */
-  margin: 0 auto; /* Center the content container horizontally */
 }
